# QDWannaB

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  build.bat  clean.bat
DESIGNPLANS/: DESIGN_v0.1.md  DESIGN_v0.2.md  DESIGN_v0.3.md
cli/: CMakeLists.txt  command.hpp  exit_command.hpp  help_command.hpp  main.cpp  parser.cpp  parser.hpp  repl.cpp  repl.hpp
cli/commands/: command.hpp  command_registry.cpp  command_registry.hpp  context.hpp  exit_command.hpp  help_command.hpp  load_command.hpp
cli/commands/stats_command/: correlation_command.hpp  count_command.hpp  covariance_command.hpp  max_command.hpp  mean_command.hpp  min_command.hpp  stddev_command.hpp  variance_command.hpp
core/: CMakeLists.txt  csv_loader.cpp  csv_loader.hpp  engine.cpp  engine.hpp
core/data/: dataset.cpp  dataset.hpp  timeseries.cpp  timeseries.hpp
core/stats/: correlation.cpp  correlation.hpp  count.cpp  count.hpp  covariance.cpp  covariance.hpp  mean.cpp  mean.hpp  minmax.cpp  minmax.hpp  stddev.cpp  stddev.hpp  variance.cpp  variance.hpp
tests/: CMakeLists.txt  test_dataset.cpp  test_mean.cpp  test_timeseries.cpp  test_variance.cpp  tests.cpp
